# dynamo

./: .gitignore  Makefile  Makefile.in  NEWS  NEWS.md  NOTICE.txt  README  README.md  alire-setup.sh  alire.toml  configure  configure.ac  configure.in  coverage.sh  dynamo.gpr.in  dynamo.xml  dynamo_config.gpr  dynamo_tests.gpr.in  dynamo_tool.gpr  dynamo_tool_gpr.gpr  generator.gpr.in  tests.gpr.in
config/: AdaMappings.xml  MySQLMappings.xml  SQLiteMappings.xml  argouml.properties  extract-doc-markdown.xsl  extract-doc.xsl  generator.properties  generator.properties.in  log4j.properties
config/commands/: add-ajax-form.xml  add-form.xml  add-module-operation.xml  add-module.xml  add-page.xml  add-permission.xml  add-query.xml  add-service.xml  add-test.xml
config/db/: create-database.xml  dynamo-sql.sql
config/mappings/: AdaMappings.xml  MySQLMappings.xml  PostgresqlMappings.xml  SQLiteMappings.xml
config/templates/: AdaMappings.xml
config/templates/add-ajax-form/: form.xhtml
config/templates/add-form/: form-response.xhtml  form.xhtml  page.xhtml  patch-form-navigation.xhtml
config/templates/add-model/: table-model.xhtml
config/templates/add-module/: module-beans-body.xhtml  module-beans-spec.xhtml  module-bundles.xhtml  module-config.xhtml  module-module-body-common.xhtml  module-module-body.xhtml  module-module-spec-common.xhtml  module-module-spec.xhtml  module-spec.xhtml  patch-application-body-1.xhtml  patch-application-spec-1.xhtml  patch-application-spec-2.xhtml
config/templates/add-module-operation/: patch-module-body-1.xhtml  patch-module-body-2.xhtml  patch-module-body-3.xhtml  patch-module-spec-1.xhtml  patch-module-spec-2.xhtml
config/templates/add-query/: query.xhtml
config/uml/: Dynamo.xmi  Dynamo.zargo  argouml-profiles.conf
db/: ado-schema.xml  create-database.xml
debian/: changelog  control  copyright  docs  lintian-overrides  rules
doc/: dynamo.1
man/man1/: dynamo.1
regtests/: alire.toml  dynamo_harness.adb  dynamo_tests.gpr  gen-artifacts-xmi-tests.adb  gen-artifacts-xmi-tests.ads  gen-artifacts-yaml-tests.adb  gen-artifacts-yaml-tests.ads  gen-integration-tests.adb  gen-integration-tests.ads  gen-integration.ads  gen-testsuite.adb  gen-testsuite.ads  run.sh
regtests/check_build/: check_build.gpr  check_build.gpr.in  gen-events.ads  gen-permissions.ads  gen-tests-packages.ads  gen-tests.ads  gen-users.ads  gen.ads  test-blog.ads  test-tblog.ads  test-tuser.ads  test-user.ads  test.ads
regtests/files/: Permission.hbm.xml  Queues.hbm.xml  User.hbm.xml  email.yaml  package.xml  permissions.xml  queue-messages.xml  serialize.xml  users.yaml
regtests/src/: dynamo_harness.adb  gen-artifacts-xmi-tests.adb  gen-artifacts-xmi-tests.ads  gen-artifacts-yaml-tests.adb  gen-artifacts-yaml-tests.ads  gen-integration-tests.adb  gen-integration-tests.ads  gen-integration.ads  gen-testsuite.adb  gen-testsuite.ads
regtests/support/: closure  pngcrush  yui-compressor
regtests/uml/: dynamo-test-associations.xmi  dynamo-test-associations.zargo  dynamo-test-beans.xmi  dynamo-test-beans.zargo  dynamo-test-dependencies.zargo  dynamo-test-enum.xmi  dynamo-test-enum.zargo  dynamo-test-errors.zargo  dynamo-test-packages.zargo  dynamo-test-serialize.zargo  dynamo-test-table-beans.zargo  dynamo-test-table.xmi  dynamo-test-table.zargo  dynamo-test-types.xmi  dynamo-test-types.zargo
src/: dbmapper.adb  dynamo.adb  gen-artifacts-distribs-bundles.adb  gen-artifacts-distribs-bundles.ads  gen-artifacts-distribs-concat.adb  gen-artifacts-distribs-concat.ads  gen-artifacts-distribs-copies.adb  gen-artifacts-distribs-copies.ads  gen-artifacts-distribs-exec.adb  gen-artifacts-distribs-exec.ads  gen-artifacts-distribs-libs.adb  gen-artifacts-distribs-libs.ads  gen-artifacts-distribs-merges.adb  gen-artifacts-distribs-merges.ads  gen-artifacts-distribs.adb  gen-artifacts-distribs.ads  gen-artifacts-docs-googlecode.adb  gen-artifacts-docs-googlecode.ads  gen-artifacts-docs-markdown.adb  gen-artifacts-docs-markdown.ads  gen-artifacts-docs.adb  gen-artifacts-docs.ads  gen-artifacts-hibernate.adb  gen-artifacts-hibernate.ads  gen-artifacts-mappings.adb  gen-artifacts-mappings.ads  gen-artifacts-query.adb  gen-artifacts-query.ads  gen-artifacts-xmi.adb  gen-artifacts-xmi.ads  gen-artifacts-yaml.adb  gen-artifacts-yaml.ads  gen-artifacts.adb  gen-artifacts.ads  gen-commands-database.adb  gen-commands-database.ads  gen-commands-distrib.adb  gen-commands-distrib.ads  gen-commands-docs.adb  gen-commands-docs.ads  (+54 more)
src/asis/: a4g-a_alloc.ads  a4g-a_debug.adb  a4g-a_debug.ads  a4g-a_elists.adb  a4g-a_elists.ads  a4g-a_opt.adb  a4g-a_opt.ads  a4g-a_osint.adb  a4g-a_osint.ads  a4g-a_output.adb  a4g-a_output.ads  a4g-a_sem.adb  a4g-a_sem.ads  a4g-a_sinput.adb  a4g-a_sinput.ads  a4g-a_stand.ads  a4g-a_types.adb  a4g-a_types.ads  a4g-asis_tables.adb  a4g-asis_tables.ads  a4g-contt-dp.adb  a4g-contt-dp.ads  a4g-contt-sd.adb  a4g-contt-sd.ads  a4g-contt-tt.adb  a4g-contt-tt.ads  a4g-contt-ut.adb  a4g-contt-ut.ads  a4g-contt.adb  a4g-contt.ads  a4g-cu_info2.adb  a4g-cu_info2.ads  a4g-dda_aux.adb  a4g-dda_aux.ads  a4g-decl_sem.adb  a4g-decl_sem.ads  a4g-defaults.adb  a4g-defaults.ads  a4g-encl_el.adb  a4g-encl_el.ads  (+92 more)
src/gnat/: adaint.c  adaint.h  aspects.adb  atree.ads  auto-host.h  config.h  gen-utils-gnat.adb  namet.adb  osint.adb  osint.ads  output.ads  prefix.c  prj-attr.adb  prj-nmsc.adb  prj-part.adb  prj-pp.adb  prj-tree.adb  prj.adb  restrict.ads  scng.adb  sdefault.adb  snames.adb  snames.ads  stringt.ads  system.h  urealp.adb  version.c
src/gpr/: gen-utils-gnat.adb
src/model/: gen-database-model.adb  gen-database-model.ads
src/yaml/: lexer-base.adb  lexer-base.ads  lexer-source-file.ads  text-builder.adb  text-builder.ads  text-pool.adb  text-pool.ads  text.adb  text.ads  yaml-lexer-evaluation.adb  yaml-lexer.adb  yaml-lexer.ads  yaml-parser.adb  yaml-parser.ads  yaml-stacks.adb  yaml-text_set.adb  yaml-text_set.ads  yaml.adb  yaml.ads
templates/model/: create-sql.xhtml  package-body.xhtml  package-spec.xhtml
templates/sql/: create-sql.xhtml
(+124 files in other folders)
