dnl Autoconf configure script for BfdAda
dnl Copyright 2001, 2002, 2003, 2005 Free Software Foundation, Inc.
dnl
dnl This file is part of BfdAda.
dnl 
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl 
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/gen.ads)

AC_CANONICAL_HOST
AC_EXEEXT

# Current release settings
GEN_MAJOR_VERSION=0
GEN_MINOR_VERSION=4
GEN_MICRO_VERSION=1-dev
GEN_VERSION=$GEN_MAJOR_VERSION.$GEN_MINOR_VERSION.$GEN_MICRO_VERSION

# checking for local tools
AC_PROG_CC
# AM_PATH_GNAT
# AM_PATH_PERL
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_LN_S

# Set the version number of GtkAda
AC_SUBST(GEN_VERSION)
AC_SUBST(GEN_MAJOR_VERSION)
AC_SUBST(GEN_MINOR_VERSION)
AC_SUBST(GEN_MICRO_VERSION)

EXEC_PREFIX="$prefix"
AC_SUBST(EXEC_PREFIX)

GEN_LIBDIR="lib"
AC_SUBST(GEN_LIBDIR)

##########################################
# Ada Util library
##########################################

AC_MSG_CHECKING([Ada Utility library (code.google.com/p/ada-util)])
AC_ARG_WITH(ada-util,
AS_HELP_STRING([--with-ada-util=x], [Path for the Ada Utility library (code.google.com/p/ada-util)]),
[
  UTIL_DIR=${withval}/
],
[
  echo "with \"util\"; project t is for Source_Dirs use (); end t;" > t.gpr
  gnatmake -p -Pt >/dev/null 2>/dev/null
  if test $? -eq 0; then
    UTIL_DIR=
  else
    UTIL_DIR=../util/
  fi;
  rm -f t.gpr
])
echo "with \"${UTIL_DIR}util\"; project t is for Source_Dirs use (); end t;" > t.gpr
gnatmake -p -Pt >/dev/null 2>/dev/null
if test $? -ne 0 ; then
   rm -f t.gpr
   AC_MSG_ERROR([Ada Utility library not found in ${UTIL_DIR}])
fi
rm -f t.gpr
AC_MSG_RESULT(${UTIL_DIR})
AC_SUBST(UTIL_DIR)

##########################################
# Ada Expression Language library
##########################################
AC_MSG_CHECKING([Ada Expression Language library (code.google.com/p/ada-el)])
AC_ARG_WITH(ada-el,
AS_HELP_STRING([--with-ada-el=x], [Path for the Ada Expression Language library (code.google.com/p/ada-el)]),
[
  EL_DIR=${withval}/
],
[
  echo "with \"el\"; project t is for Source_Dirs use (); end t;" > t.gpr
  gnatmake -p -Pt >/dev/null 2>/dev/null
  if test $? -eq 0; then
    EL_DIR=
  else
    EL_DIR=../el/
  fi;
  rm -f t.gpr
])
echo "with \"${EL_DIR}el\"; project t is for Source_Dirs use (); end t;" > t.gpr
gnatmake -p -Pt >/dev/null 2>/dev/null
if test $? -ne 0 ; then
   rm -f t.gpr
   AC_MSG_ERROR([Ada Expression Language library not found in ${EL_DIR}])
fi
rm -f t.gpr
AC_MSG_RESULT(${EL_DIR})
AC_SUBST(EL_DIR)

##########################################
# Ada Server Faces library
##########################################
AC_MSG_CHECKING([Ada Server Faces library (code.google.com/p/ada-asf)])
AC_ARG_WITH(ada-asf,
AS_HELP_STRING([--with-ada-asf=x], [Path for the Ada Server Faces library (code.google.com/p/ada-asf)]),
[
  ASF_DIR=${withval}/
],
[
  echo "with \"asf\"; project t is for Source_Dirs use (); end t;" > t.gpr
  gnatmake -p -Pt >/dev/null 2>/dev/null
  if test $? -eq 0; then
    ASF_DIR=
  else
    ASF_DIR=../asf/
  fi;
  rm -f t.gpr
])
echo "with \"${ASF_DIR}asf\"; project t is for Source_Dirs use (); end t;" > t.gpr
gnatmake -p -Pt >/dev/null 2>/dev/null
if test $? -ne 0 ; then
   rm -f t.gpr
   AC_MSG_ERROR([Ada Server Faces library not found in ${ASF_DIR}])
fi
rm -f t.gpr
AC_MSG_RESULT(${ASF_DIR})
AC_SUBST(ASF_DIR)

##########################################
# Ada Database Objects library
##########################################
AC_MSG_CHECKING([Ada Database Objects library (code.google.com/p/ada-ado)])
AC_ARG_WITH(ada-ado,
AS_HELP_STRING([--with-ada-ado=x], [Path for the Ada Database Objects library (code.google.com/p/ada-ado)]),
[
  ADO_DIR=${withval}/
],
[
  echo "with \"ado\"; project t is for Source_Dirs use (); end t;" > t.gpr
  gnatmake -p -Pt >/dev/null 2>/dev/null
  if test $? -eq 0; then
    ADO_DIR=
  else
    ADO_DIR=../ado/
  fi;
  rm -f t.gpr
])
echo "with \"${ADO_DIR}ado\"; project t is for Source_Dirs use (); end t;" > t.gpr
gnatmake -p -Pt >/dev/null 2>/dev/null
if test $? -ne 0 ; then
   rm -f t.gpr
   AC_MSG_ERROR([Ada Database Objects library not found in ${ADO_DIR}])
fi
rm -f t.gpr
AC_MSG_RESULT(${ADO_DIR})
AC_SUBST(ADO_DIR)

AC_SUBST(mkdir_p)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT(
dynamo.gpr
)
